name:                tsp-viz
version:             0.1.0.0
synopsis:            Realtime TSP visualization.

license:             BSD3
license-file:        LICENSE
author:              David Nilsson
homepage:            https://github.com/davnils/tsp-viz
maintainer:          nilsson.dd+code@gmail.com

category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable tsp-viz
  main-is:           TSPViz.hs
  build-depends:     base ==4.5.*, stm ==2.3.*, vector ==0.9.*, gloss ==1.7.*
